issues fixed
- left bar was still visible on vertical tablet
- there was no search section on mobile
- header was a mess on tablet. categories were not aligned properly

--- a/furniture-core/css/default.css
+++ b/furniture-core/css/default.css
@@ -1019,6 +1019,15 @@ body.view-cart .middleContent {
 	#leftContent {
 		padding-bottom: 50px;
 	}
+	aside#leftContent {
+    display: none;
+}
+.navbar-nav > li > .dropdown-menu {
+    display: none;
+}
+.navbar-nav > li.dropdown > a:after {
+    display:none;
+}
 }
 @media(max-width: 767px) {
 	.browsing_historyBlock .flex-viewport {
@@ -1034,4 +1043,13 @@ body.view-cart .middleContent {
 	.copyright_txt {
 		line-height: 1.5;
 	}
+	.top-nav {
+    display:block !important;
+}
+.useraccount{
+	display:none;
+}
+.searchBox {
+    padding: 20px 0 10px;
+}
 }
